Add cook image to homepage and link the recipe page to homepage

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <img src="./images/cook.jpg" height="300" width="300" alt="Cook image">
+    <h2>Click the below links for recipes</h2>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+    </ul>
 </body>
 </html>
